...
                        bytes.write(buffer, 0, n)
                    }
                    entries[name] = bytes.toByteArray()
                }
            }
        } catch (e: ZipException) {
            throw Rejected("skin.json not found")
        } catch (e: IOException) {
            throw Rejected("skin.json not found")
        }
        return entries
    }

...
